# remote

./: Cargo.toml  LICENSE  rustfmt.toml
public/: index.html  main.css  main.js
src/: keyboard.rs  main.rs  mediainfo.rs  volume.rs
src/frontend/: button.rs  head.rs  mediainfo.rs  mod.rs  remote.rs
templates/: mediainfo.html  remote.html
