[package]
name = "remote"
version = "0.1.0"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-warp"] }
askama_warp = "0.13"
autopilot = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
winapi = { version = "0.3", features = ["winuser"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
]
