[package]
name = "remote"
version = "0.1.0"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
maud = { version = "0.26.0", features = ["warp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
windows-core = "=0.58.0"

[dependencies.windows]
version = "=0.58.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Media_Control"
]
